updated mobile version

--- a/src/components/Links.css
+++ b/src/components/Links.css
@@ -16,3 +16,9 @@
     display: flex;
     justify-content: space-between;
 }
+
+@media (max-width: 800px) {
+    .links {
+        margin-left: 0%;
+    }
+}
