--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,34 @@
-.App {
+.app {
+    overflow: auto;
+    height: 100vh;
+}
+
+.container {
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+    height: 100vh;
+}
+  
+.LeftSide, .RightSide {
+    flex: 1;
+    overflow: auto;
+}
+  
+@media (max-width: 800px) {
+    .App {
+        height: auto;
+      }
+    
+      .container {
+        flex-direction: column;
+        height: auto;
+        overflow: auto;
+      }
+    
+      .LeftSide, .RightSide {
+        height: auto;
+        overflow: visible;
+      }
 }
 
 
