--- a/src/components/LeftSide.css
+++ b/src/components/LeftSide.css
@@ -5,4 +5,10 @@
     flex-direction: column;
     align-items: left;
 }
-  
+
+@media (max-width: 800px) {
+    .left-side {
+      width: 100%;
+      align-items: center;
+    }
+}
