--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -18,6 +18,21 @@
 }
 
 #profile {
-    padding-left: 28%;
+    margin-left: 28%;
     padding-bottom: 5%;
+}
+
+@media (max-width: 800px) {
+    #profile {
+        margin-left: 0%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #profile p {
+        padding-right: 0%;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
 }
