--- a/src/components/RightSide.css
+++ b/src/components/RightSide.css
@@ -5,4 +5,13 @@
     display: flex;
     flex-direction: column;
 }
+
+@media (max-width: 800px) {
+    .right-side {
+      width: 100%;
+      height: auto;
+      margin: 10%;
+      overflow-y: hidden;
+    }
+}
   
