fixed mobile view issues

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -8,3 +8,11 @@ p {
     font-size: 17px;
     line-height: 1.8;
 }
+
+@media (max-width: 800px) {
+    #about {
+        padding-left: 10%;
+        padding-right: 10%;
+        margin: 0%;
+    }
+}
