--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: row;
     height: 100vh;
+    width: 100%;
 }
   
 .LeftSide, .RightSide {
@@ -17,12 +18,15 @@
 @media (max-width: 800px) {
     .App {
         height: auto;
+        width: 100%;
+
       }
     
       .container {
         flex-direction: column;
         height: auto;
-        overflow: auto;
+        width: auto;
+        overflow: hidden;
       }
     
       .LeftSide, .RightSide {
