--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -22,6 +22,24 @@
     padding-bottom: 5%;
 }
 
+.skills-container {
+    margin-top: 5%;
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+}
+
+img {
+    width: 22px;
+    height: auto;
+    opacity: 0.7;
+    transform: all 0.5s ease;
+}
+
+img:hover {
+    opacity: 1;
+}
+
 @media (max-width: 800px) {
     #profile {
         margin-left: 0%;
