--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -49,6 +49,22 @@
     margin: 0;
 }
 
+.link {
+    font-size: 13px;
+    color: inherit;
+    text-decoration: none;
+    margin-right: 10px;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-bottom: 3px;
+    border-radius: 1px;
+    box-shadow: 0 0 0 1px #4b6179;
+}
+
+.link:hover{
+    background-color: rgba(118, 140, 168, 0.1);
+}
+
 .description {
     font-size: 14px;
     margin: 5px 0 0;
@@ -61,15 +77,6 @@
 .tech {
     opacity: 1;
     font-size: 14px;
-}
-
-.repo:hover{
-    opacity: 1;
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
 }
 
 @keyframes flash {
