--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,34 @@
-.app {
-    overflow: auto;
+html, body {
+  overflow: hidden;
+}
+
+.app-home {
     height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .container {
+    flex: 1;
     display: flex;
-    flex-direction: row;
+    flex-direction: center;
+    align-items: center;
     height: 100vh;
     width: 100%;
+}
+
+.app-projects {
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  height: 100vh; 
+}
+
+.projects-container{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 15%;
+    justify-content: flex-start;
 }
   
 .LeftSide, .RightSide {
