mobile scroll error fixed

--- a/src/App.css
+++ b/src/App.css
@@ -33,27 +33,39 @@ html, body {
   
 .LeftSide, .RightSide {
     flex: 1;
-    overflow: auto;
 }
   
 @media (max-width: 800px) {
-    .App {
-        height: auto;
-        width: 100%;
 
-      }
-    
-      .container {
-        flex-direction: column;
-        height: auto;
-        width: auto;
-        overflow: hidden;
-      }
-    
-      .LeftSide, .RightSide {
-        height: auto;
-        overflow: visible;
-      }
+  html, body {
+    overflow: auto;
+    height: auto;
+  }
+
+  .App {
+    height: auto;
+    width: 100%;
+  }
+
+  .container {
+    flex-direction: column;
+    height: auto;
+    width: 100%;
+    overflow: visible;
+  }
+
+  .LeftSide,
+  .RightSide {
+    width: 100%;
+    height: auto;
+    overflow: visible;
+  }
+
+  .projects-container {
+    margin-left: 0;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
 }
 
 
