--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -46,7 +46,7 @@
 .title {
     opacity: 1;
     font-weight: bold;
-    margin: 0;
+    margin: 0 0 5px 0;
 }
 
 .link {
@@ -65,13 +65,40 @@
     background-color: rgba(118, 140, 168, 0.1);
 }
 
-.description {
-    font-size: 14px;
-    margin: 5px 0 0;
+.resume-link {
+    padding-top: 20px;
 }
 
-.project {
-    flex: 1;
+.resume-link a {
+    color: white;
+    opacity: 0.7;
+    text-decoration: none;
+    position: relative;
+}
+
+.resume-link a:hover{
+    opacity: 1;
+}
+
+.resume-link a::after {
+    content: '→';
+    font-size: 16px;
+    font-weight: bolder;
+    margin-left: 5px;
+    position: absolute;
+    top: 0;
+    display: inline-block;
+    transform: rotate(315deg);
+    transition: transform 0.3s ease;
+}
+
+.resume-link a:hover::after {
+    transform: rotate(315deg) translateX(+6px);
+}
+
+.pj-description {
+    font-size: 14px;
+    margin-top: 10px;
 }
 
 .tech {
